--- a/public/assets/css/swiper.css
+++ b/public/assets/css/swiper.css
@@ -5,7 +5,6 @@
     margin-top: 40px;
     margin-bottom: 40px;
     border-radius: 25px;
-    height: 380px;
     .swiper-button-prev, .swiper-button-next {
         height: 100%;
         top: 0;
@@ -35,7 +34,7 @@
 .sideslider {
     .swiper-container {
         height: 100%;
-        max-height: 300px;
+
     }
 }
 
@@ -48,4 +47,14 @@
             margin: 0;
         }
     }
+}
+
+.about-us-swiper  {
+    .swiper-container
+    {
+        width: 100%;
+
+        display: block;
+    }
+
 }
