--- a/public/assets/css/calender.css
+++ b/public/assets/css/calender.css
@@ -3,16 +3,26 @@
         background-color: white;
         border-radius: 2em;
         padding: 2em;
-        margin-left: 60px;
-        width: 50%;
+        margin-left: 3rem;
+        width: 55%;
+        max-width: 800px;
 
         h1{
-            font-size: 30px;
+            font-size: 1.5rem;
             font-weight: bold;
         }
 
         .calender-month{
             margin-bottom: 20px;
+        }
+    }
+}
+
+@media only screen and (max-width:900px){
+    .container{
+        .calender{
+            margin: 0 auto;
+            width: 95%;
         }
     }
 }
