--- a/public/assets/css/calender.css
+++ b/public/assets/css/calender.css
@@ -12,6 +12,10 @@
             font-weight: bold;
         }
 
+        i{
+            font-size: 12px;
+        }
+
         .calender-month{
             margin-bottom: 20px;
         }
@@ -23,6 +27,10 @@
         .calender{
             margin: 0 auto;
             width: 95%;
+
+            i{
+                display: none;
+            }
         }
     }
 }
