--- a/public/assets/css/fields.css
+++ b/public/assets/css/fields.css
@@ -97,6 +97,7 @@ form.dropzone {
     }
     .dz-metadata-container {
         display: flex;
+        flex-direction: column;
         justify-content: center;
     }
 
