--- a/public/assets/css/calender.css
+++ b/public/assets/css/calender.css
@@ -3,6 +3,7 @@
         display: flex;
         align-items: flex-start;
         gap: 20px;
+        justify-content: space-between;
     }
 
     .calender{
@@ -25,6 +26,10 @@
         .calender-month{
             margin-bottom: 20px;
         }
+    }
+    .link-wrapper {
+        display: flex;
+        flex-direction: column;
     }
 }
 
