--- a/public/assets/css/calender.css
+++ b/public/assets/css/calender.css
@@ -1,51 +1,18 @@
-.container{
-    .calender-container {
-        display: flex;
-        align-items: flex-start;
-        gap: 20px;
-        justify-content: space-between;
-    }
-
-    .calender{
+.calender-container {
+    width: 100%;
+    .calender {
         background-color: white;
-        border-radius: 2em;
-        padding: 2em;
-        margin-left: 3rem;
-        width: 55%;
-        max-width: 800px;
-
-        h1{
+        border-radius: 25px;
+        padding: 40px;
+        h1 {
             font-size: 1.5rem;
             font-weight: bold;
         }
-
-        i{
+        i {
             font-size: 12px;
         }
-
         .calender-month{
             margin-bottom: 20px;
-        }
-    }
-    .link-wrapper {
-        display: flex;
-        flex-direction: column;
-    }
-}
-
-@media only screen and (max-width:900px){
-    .container{
-        .calender-container {
-            flex-direction: column;
-        }
-
-        .calender{
-            margin: 0 auto;
-            width: 95%;
-
-            i{
-                display: none;
-            }
         }
     }
 }
