--- a/public/assets/css/item.css
+++ b/public/assets/css/item.css
@@ -68,6 +68,26 @@
     }
 }
 
+.assignments{
+    p{
+        color:black !important;
+    }
+    .items-wrapper .items .item:nth-child(4n+1) {
+        background-color: #F7D7DF; /* Yellow */
+    }
+
+    .items-wrapper .items .item:nth-child(4n+2) {
+        background-color: #C9EFD6; /* Blue */
+    }
+
+    .items-wrapper .items .item:nth-child(4n+3) {
+        background-color: #C1E0FF; /* Pink */
+    }
+
+    .items-wrapper .items .item:nth-child(4n+4) {
+        background-color: #F6EBCC; /* Green */
+    }
+}
 @media only screen and (max-width: 1200px) {
     .items-wrapper {
         .items {
