--- a/public/assets/css/item.css
+++ b/public/assets/css/item.css
@@ -37,10 +37,10 @@
                     height: 100%;
                     display: flex;
                     flex-wrap: wrap;
+                    flex-direction: column;
 
                     .item-header {
                         width: 100%;
-                        flex: 1 1 auto;
                         height: auto;
                         h3 {
                             font-size: 28px;
@@ -52,7 +52,8 @@
                     }
                     .item-body {
                         width: 100%;
-
+                        flex: 1 1 auto;
+                        align-items: flex-start;
                         p {
                             color: var(--default-grey);
                             font-size: 20px;
@@ -61,6 +62,7 @@
                     .item-footer {
                         width: 100%;
                         align-content: flex-end;
+                        margin-top: auto;
                     }
                 }
             }
